CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT("LudumDare 26")

SET(CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/CMake")

IF(WIN32)
  SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /W3")
  SET(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} /LTCG")
ELSE()
  SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++0x -Wall -Wextra -pedantic")
  SET(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -march=native -mtune=native -O2 -pipe -funroll-loops")
ENDIF()

add_definitions(-DUNICODE -D_UNICODE)

ADD_SUBDIRECTORY(Kunlaboro)
ADD_SUBDIRECTORY(Game)

SET(Kunlaboro_BOOST ON CACHE INTERNAL "Internal value" FORCE)